--- a/.github/workflows/update-leaderboard.yaml
+++ b/.github/workflows/update-leaderboard.yaml
@@ -10,19 +10,19 @@ on:
       totalEarnings:
         description: 'Total Earnings'
         required: true
-        default: 0
+        default: '0'
       totalClicks:
         description: 'Total Clicks'
         required: true
-        default: 0
+        default: '0'
       totalRebirths:
         description: 'Total Rebirths'
         required: true
-        default: 0
+        default: '0'
       totalUpgrades:
         description: 'Total Upgrades'
         required: true
-        default: 0
+        default: '0'
 
 jobs:
   update-leaderboard:
@@ -32,9 +32,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install jq
+      run: sudo apt-get install -y jq
+
     - name: Update leaderboard
       run: |
-        username=${{ github.event.inputs.username }}
+        username="${{ github.event.inputs.username }}"
         totalEarnings=${{ github.event.inputs.totalEarnings }}
         totalClicks=${{ github.event.inputs.totalClicks }}
         totalRebirths=${{ github.event.inputs.totalRebirths }}
@@ -55,10 +58,10 @@ jobs:
 
     - name: Commit and push changes
       env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add leaderboard.json
         git commit -m 'Update leaderboard'
-        git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}.git
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
