yml file update and comments on .json

--- a/.github/workflows/update-users.yml
+++ b/.github/workflows/update-users.yml
@@ -24,4 +24,4 @@ jobs:
         git commit -m 'Update users.json via GitHub Actions'
         git push
       env:
-        GH_TOKEN: ${{ secrets.BITCLICKER_TOKEN }}
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
